Create header structure

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		/>
 		<!-- Cascading Style Sheep Links -->
 		<link rel="stylesheet" href="./assets/css/normalize.css" />
-		<link rel="stylesheet" href="./assets/css/index.css" />
+		<link rel="stylesheet" href="./assets/css/main.css" />
 		<!-- FontAwesome --For Added Icons -->
 		<link
 			rel="stylesheet"
@@ -34,33 +34,102 @@
 		<link
 			rel="shortcut icon"
 			type="image/x-icon"
-			href="./assets/images/logo-image/"
+			href="./assets/images/favicon-image/apple-touch-icon-48x48.png"
 		/>
 		<link
 			rel="apple-touch-icon"
 			type="image/x-icon"
-			href="./assets/images/logo-image/"
+			href="./assets/images/favicon-image/apple-touch-icon-48x48.png"
 		/>
 		<link
 			rel="apple-touch-icon"
 			sizes="72x72"
 			type="image/x-icon"
-			href="./assets/images/logo-image/"
+			href="./assets/images/favicon-image/apple-touch-icon-72x72.png"
 		/>
 		<link
 			rel="apple-touch-icon"
 			sizes="114x114"
 			type="image/x-icon"
-			href="./assets/images/logo-image/"
+			href="./assets/images/logo-image/favicon-image/apple-touch-icon-114x114.png"
 		/>
 		<!-- Some Meta links -->
 		<!-- Chrome, FireFox and Opera -->
 		<meta name="theme-color" content="#fff" />
 		<!-- Windows Phone -->
-		<meta name="msapplication-navbutton-color" content="#fff" />
+		<meta name="msapplication-nav-button-color" content="#fff" />
 		<!-- iOS Safari -->
 		<meta name="apple-mobile-web-app-status-bar-style" content="#fff" />
-		<title>Tim_Project</title>
+		<!-- Site Title -->
+		<title>Bean Scene</title>
 	</head>
-	<body></body>
+	<body>
+		<!-- =.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.= Site Header Started =.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.= -->
+
+		<header class="header" id="header">
+			<div class="container header__container">
+				<nav class="header__nav">
+					<a href="index.html" class="header__nav-logo">
+						<img
+							src="./assets/images/logo-image/Bean_Scene_logo.svg"
+							alt="Header__logo"
+							width="135"
+							height="45"
+						/>
+					</a>
+					<ul class="header__nav-menu">
+						<li class="header__menu-list">
+							<a href="#"></a>
+						</li>
+						<li class="header__menu-list">
+							<a href="#"></a>
+						</li>
+						<li class="header__menu-list">
+							<a href="#"></a>
+						</li>
+						<li class="header__menu-list">
+							<a href="#"></a>
+						</li>
+					</ul>
+					<!-- Hamburger Menu -->
+					<div class="hamburger" id="hamburger">
+						<span class="line"></span>
+						<span class="line"></span>
+						<span class="line"></span>
+					</div>
+					<div class="header__login-links">
+						<a href="#">Sign In</a>
+						<a href="#">Sign Up</a>
+					</div>
+				</nav>
+			</div>
+		</header>
+
+		<!-- =.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.= Site Header Finished =.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.= -->
+
+		<!-- =.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.= Site Main Started =.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.= -->
+
+		<main class="main">
+			<!-- =.=.=.=.=.=.=.= =.=.=.=.=.=.=.= -->
+			<section class="__section"></section>
+
+			<!-- =.=.=.=.=.=.=.= =.=.=.=.=.=.=.= -->
+
+			<section class="__section"></section>
+
+			<!-- =.=.=.=.=.=.=.= =.=.=.=.=.=.=.= -->
+
+			<section class="__section"></section>
+
+			<!-- =.=.=.=.=.=.=.= =.=.=.=.=.=.=.= -->
+
+			<section class="__section"></section>
+		</main>
+
+		<!-- =.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.= Site Main Finished =.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.= -->
+
+		<!-- =.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.= Site Footer Started =.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.= -->
+
+		<!-- =.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.= Site Footer Finished =.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.=.= -->
+	</body>
 </html>
